demo/canary-istio-dest/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: canary-istio-dest
    app: canary-istio-dest
  name: canary-istio-dest
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
    - name: https
      port: 443
      targetPort: 8443
      protocol: TCP
  selector:
    app.kubernetes.io/name: canary-istio-dest
    app: canary-istio-dest
  type: ClusterIP
