demo/canary-istio-dest/base/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: canary-istio-dest
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
      targetPort: 8080
    hosts:
    - canary-istio-dest-canary-istio-dest.apps.rosa.rosalab2.kq62.p3.openshiftapps.com
