demo/canary-istio-dest/base/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary-istio-dest
spec:
  gateways:
    - canary-istio-dest
  hosts:
    - canary-istio-dest
    - canary-istio-dest.canary-istio-dest.svc.cluster.local
    - canary-istio-dest-canary-istio-dest.apps.rosa.rosalab2.ismk.p3.openshiftapps.com
  http:
  - name: primary        # referenced in canary.trafficRouting.istio.virtualService.routes
    route:
    - destination:
        host: canary-istio-dest # referenced in canary.stableService
        subset: stable
      weight: 100
    - destination:
        host: canary-istio-dest # referenced in canary.canaryService
        subset: canary
      weight: 0
